--- a/index.html
+++ b/index.html
@@ -2,17 +2,32 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Boostrap Freelancer</title>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+   <link rel="stylesheet" type="text/css" href="css/style.css">
+   <title>Boostrap Freelancer</title>
 </head>
 
 <body>
-
+   <header class="text-uppercase fw-bold">
+      <div id="header" class="container-fluid d-flex justify-content-between align-items-center h-100">
+         <h1 class="fw-bold text-white">Start boostrap</h1>
+         <a class="text-white fs-2 d-sm-none border border-light rounded px-2" href="#"><i class="fas fa-bars"></i></a>
+         <ul class="list-inline d-none d-sm-block">
+            <li class="list-inline-item"><a class="text-decoration-none text-white" href="#">portfolio</a>
+            </li>
+            <li class="list-inline-item"><a class="text-decoration-none text-white" href="#">about</a></li>
+            <li class="list-inline-item"><a class="text-decoration-none text-white" href="#">contact</a>
+            </li>
+         </ul>
+      </div>
+   </header>
 </body>
 
 </html>
