add under nav in header

--- a/index.html
+++ b/index.html
@@ -15,19 +15,32 @@
 </head>
 
 <body>
+   <!-- Header -->
    <header class="text-uppercase fw-bold">
-      <div id="header" class="container-fluid d-flex justify-content-between align-items-center h-100">
-         <h1 class="fw-bold text-white">Start boostrap</h1>
-         <a class="text-white fs-2 d-sm-none border border-light rounded px-2" href="#"><i class="fas fa-bars"></i></a>
-         <ul class="list-inline d-none d-sm-block">
-            <li class="list-inline-item"><a class="text-decoration-none text-white" href="#">portfolio</a>
-            </li>
-            <li class="list-inline-item"><a class="text-decoration-none text-white" href="#">about</a></li>
-            <li class="list-inline-item"><a class="text-decoration-none text-white" href="#">contact</a>
-            </li>
-         </ul>
-      </div>
+      <!-- Nav -->
+      <nav id="top-nav">
+         <div id="top-nav-header" class="container-fluid d-flex justify-content-between align-items-center h-100">
+            <h1 class="fw-bold text-white">Start boostrap</h1>
+            <a class="text-white fs-2 d-sm-none border border-light rounded px-2" href="#"><i
+                  class="fas fa-bars"></i></a>
+            <ul class="list-inline d-none d-sm-block">
+               <li class="list-inline-item"><a class="text-decoration-none text-white" href="#">portfolio</a>
+               </li>
+               <li class="list-inline-item"><a class="text-decoration-none text-white" href="#">about</a></li>
+               <li class="list-inline-item"><a class="text-decoration-none text-white" href="#">contact</a>
+               </li>
+            </ul>
+         </div>
+      </nav>
+      <!-- Under nav -->
+      <section id="under-nav" class="d-flex flex-column align-items-center p-4 text-white">
+         <img class="rounded-circle d-block w-50" src="https://picsum.photos/id/237/300/300" alt="Dog">
+         <h2 class="pt-2 fw-bold display-2">start boostrap</h2>
+         <i class="fas fa-star fa-2x"></i>
+         <h4 class="pt-2">graphic artist - web designer - illustrator</h4>
+      </section>
    </header>
+
 </body>
 
 </html>
