--- a/index.html
+++ b/index.html
@@ -40,7 +40,48 @@
          <h4 class="pt-2">graphic artist - web designer - illustrator</h4>
       </section>
    </header>
-
+   <!-- Main -->
+   <main>
+      <!-- Cards -->
+      <div class="images_box">
+         <div class="container-fluid text-uppercase d-flex flex-column align-items-center p-4 p-sm-5">
+            <h2 class="display-6 fw-bold">portfolio</h2>
+            <i class="fas fa-star fa-2x pt-3"></i>
+            <div class="row g-4 mt-1">
+               <div class="col-12 col-sm-6">
+                  <div class="card_first rounded d-flex align-items-center justify-content-center">
+                     <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
+                  </div>
+               </div>
+               <div class="col-12 col-sm-6">
+                  <div class="card_second rounded d-flex align-items-center justify-content-center">
+                     <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
+                  </div>
+               </div>
+               <div class="col-12 col-sm-6">
+                  <div class="card_third rounded d-flex align-items-center justify-content-center">
+                     <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
+                  </div>
+               </div>
+               <div class="col-12 col-sm-6">
+                  <div class="card_fourth rounded d-flex align-items-center justify-content-center">
+                     <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
+                  </div>
+               </div>
+               <div class="col-12 col-sm-6">
+                  <div class="card_fifth rounded d-flex align-items-center justify-content-center">
+                     <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
+                  </div>
+               </div>
+               <div class="col-12 col-sm-6">
+                  <div class="card_sixth rounded d-flex align-items-center justify-content-center">
+                     <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </main>
 </body>
 
 </html>
