added about section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,25 @@
             </div>
          </div>
       </div>
+      <!-- About -->
+      <div id="about" class="row justify-content-center w-100">
+         <div class="col-6 d-flex flex-column align-items-center text-white py-4">
+            <h2 class="display-6 fw-bold text-uppercase">about</h2>
+            <i class="fas fa-star fa-2x pt-3"></i>
+            <p class="pt-3"><strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas amet quaerat fugit in
+                  porro
+                  labore ex
+                  numquam, harum ab atque modi consequatur cupiditate, debitis aut? Non, doloremque. Voluptate, ex
+                  id?</strong></p>
+            <p class="pt-3"><strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas amet quaerat fugit in
+                  porro
+                  labore ex numquam, harum ab atque modi consequatur cupiditate, debitis aut? Non, doloremque.
+                  Voluptate,
+                  ex id?</strong></p>
+            <a class="text-white fs-2 d-sm-none border border-light rounded px-2 text-decoration-none fw-bold mt-3"
+               href="#"><i class="fas fa-download"></i> Download</a>
+         </div>
+      </div>
    </main>
 </body>
 
