added contact me

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
       <!-- About -->
       <div id="about">
-         <div class="row justify-content-center col-12">
+         <div class="row justify-content-center">
             <div class="col-6 d-flex flex-column align-items-center text-white py-4">
                <h2 class="display-6 fw-bold text-uppercase">about</h2>
                <i class="fas fa-star fa-2x pt-3"></i>
@@ -101,6 +101,29 @@
                      ex id?</strong></p>
                <a class="text-white fs-2 border border-light rounded px-2 text-decoration-none fw-bold mt-3" href="#"><i
                      class="fas fa-download"></i> Download</a>
+            </div>
+         </div>
+      </div>
+      <!-- Contact me -->
+      <div id="contact_me">
+         <div class="row justify-content-center">
+            <div class="col-6 d-flex flex-column align-items-center py-4">
+               <h2 class="display-6 fw-bold text-uppercase">contact me</h2>
+               <i class="fas fa-star fa-2x pt-3"></i>
+               <form class="pt-3 d-flex flex-column">
+                  <label for="name">Name</label><br>
+                  <input class="border-0 border-bottom" type="text" id="name" name="name"><br>
+                  <label for="email">Email Address</label><br>
+                  <input class="border-0 border-bottom" type="email" id="email" name="email"><br>
+                  <label for="phone">Name Number</label><br>
+                  <input class="border-0 border-bottom" type="tel" id="phone" name="phone"><br>
+                  <label for="message">Message</label><br>
+                  <textarea class="border-0 border-bottom" name="message" id="message" rows="5"></textarea>
+                  <a id="send_form"
+                     class="text-white col-6 fs-2 border rounded px-2 py-1 mt-3 text-decoration-none text-center"
+                     href="#">
+                     Send</a>
+               </form>
             </div>
          </div>
       </div>
