--- a/index.html
+++ b/index.html
@@ -128,6 +128,40 @@
          </div>
       </div>
    </main>
+   <!-- Footer -->
+   <Footer>
+      <!-- Locatiom social -->
+      <div id="location">
+         <div class="container-fluid d-flex flex-column align-items-center text-white fw-bold px-2 py-5 text-center">
+            <h3 class="text-uppercase">location</h3>
+            <p class="fs-5">2215 John Daniel Drive Clarck, MO 54243</p>
+            <h3 class="text-uppercase pt-5">around the web</h3>
+            <!-- Social -->
+            <ul class="list-inline">
+               <li class="list-inline-item">
+                  <a href="#"><i class="fab fa-facebook-f fa-2x m-2 text-white"></i></a>
+               </li>
+               <li class="list-inline-item">
+                  <a href="#"><i class="fab fa-google-plus-g fa-2x m-2 text-white"></i></a>
+               </li>
+               <li class="list-inline-item">
+                  <a href="#"><i class="fab fa-twitter fa-2x m-2 text-white"></i></a>
+               </li>
+               <li class="list-inline-item">
+                  <a href="#"><i class="fab fa-linkedin-in fa-2x m-2 text-white"></i></a>
+               </li>
+            </ul>
+            <h3 class="text-uppercase pt-5">about freelancer</h3>
+            <p class="fs-5">Freelance is a free to use, open source Boostrap theme created by <a id="footer_boostrap"
+                  class="text-decoration-none" href="#">Start
+                  Boostrap</a></p>
+         </div>
+      </div>
+      <!-- Copyright -->
+      <div id="copyright" class="text-center">
+         <p class="mb-0 pt-4 pb-5 text-white">Copyright <i class="far fa-copyright"></i> Your Website 2021</p>
+      </div>
+   </Footer>
 </body>
 
 </html>
