--- a/index.html
+++ b/index.html
@@ -132,29 +132,37 @@
    <Footer>
       <!-- Locatiom social -->
       <div id="location">
-         <div class="container-fluid d-flex flex-column align-items-center text-white fw-bold px-2 py-5 text-center">
-            <h3 class="text-uppercase">location</h3>
-            <p class="fs-5">2215 John Daniel Drive Clarck, MO 54243</p>
-            <h3 class="text-uppercase pt-5">around the web</h3>
+         <div
+            class="container-fluid d-flex flex-sm-row justify-content-sm-between align-items-sm-start flex-column align-items-center text-white fw-bold px-2 px-sm-5 py-5 text-center">
+            <div class="location col-sm-4">
+               <h3 class="text-uppercase">location</h3>
+               <p class="fs-5">2215 John Daniel Drive Clarck, MO 54243</p>
+            </div>
             <!-- Social -->
-            <ul class="list-inline">
-               <li class="list-inline-item">
-                  <a href="#"><i class="fab fa-facebook-f fa-2x m-2 text-white"></i></a>
-               </li>
-               <li class="list-inline-item">
-                  <a href="#"><i class="fab fa-google-plus-g fa-2x m-2 text-white"></i></a>
-               </li>
-               <li class="list-inline-item">
-                  <a href="#"><i class="fab fa-twitter fa-2x m-2 text-white"></i></a>
-               </li>
-               <li class="list-inline-item">
-                  <a href="#"><i class="fab fa-linkedin-in fa-2x m-2 text-white"></i></a>
-               </li>
-            </ul>
-            <h3 class="text-uppercase pt-5">about freelancer</h3>
-            <p class="fs-5">Freelance is a free to use, open source Boostrap theme created by <a id="footer_boostrap"
-                  class="text-decoration-none" href="#">Start
-                  Boostrap</a></p>
+            <div class="social col-sm-4">
+               <h3 class="text-uppercase pt-5 pt-sm-0">around the web</h3>
+               <ul class="list-inline">
+                  <li class="list-inline-item">
+                     <a href="#"><i class="fab fa-facebook-f fa-2x m-2 text-white"></i></a>
+                  </li>
+                  <li class="list-inline-item">
+                     <a href="#"><i class="fab fa-google-plus-g fa-2x m-2 text-white"></i></a>
+                  </li>
+                  <li class="list-inline-item">
+                     <a href="#"><i class="fab fa-twitter fa-2x m-2 text-white"></i></a>
+                  </li>
+                  <li class="list-inline-item">
+                     <a href="#"><i class="fab fa-linkedin-in fa-2x m-2 text-white"></i></a>
+                  </li>
+               </ul>
+            </div>
+            <!-- About freelancer -->
+            <div class="about_freelancer col-sm-4">
+               <h3 class="text-uppercase pt-5 pt-sm-0">about freelancer</h3>
+               <p class="fs-5">Freelance is a free to use, open source Boostrap theme created by <a id="footer_boostrap"
+                     class="text-decoration-none" href="#">Start
+                     Boostrap</a></p>
+            </div>
          </div>
       </div>
       <!-- Copyright -->
