--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
    <!-- Header -->
    <header class="text-uppercase fw-bold">
       <!-- Nav -->
-      <nav id="top-nav">
-         <div id="top-nav-header" class="container-fluid d-flex justify-content-between align-items-center h-100">
+      <nav id="top-nav" class="col-12">
+         <div id="top-nav-header"
+            class="container-fluid d-flex justify-content-between align-items-center col-sm-11 h-100">
             <h1 class="fw-bold text-white">Start boostrap</h1>
             <a class="text-white fs-2 d-sm-none border border-light rounded px-2" href="#"><i
                   class="fas fa-bars"></i></a>
@@ -34,7 +35,7 @@
       </nav>
       <!-- Under nav -->
       <section id="under-nav" class="d-flex flex-column align-items-center p-4 text-white">
-         <img class="rounded-circle d-block w-50" src="https://picsum.photos/id/237/300/300" alt="Dog">
+         <img class="rounded-circle d-block col-6 col-sm-3" src="https://picsum.photos/id/237/300/300" alt="Dog">
          <h2 class="pt-2 fw-bold display-2">start boostrap</h2>
          <i class="fas fa-star fa-2x"></i>
          <h4 class="pt-2">graphic artist - web designer - illustrator</h4>
@@ -44,7 +45,7 @@
    <main>
       <!-- Cards -->
       <div class="images_box">
-         <div class="container-fluid text-uppercase d-flex flex-column align-items-center p-4 p-sm-5">
+         <div class="container-fluid text-uppercase d-flex flex-column align-items-center p-4 col-sm-11">
             <h2 class="display-6 fw-bold">portfolio</h2>
             <i class="fas fa-star fa-2x pt-3"></i>
             <div class="row g-4 mt-1">
@@ -84,21 +85,25 @@
       <!-- About -->
       <div id="about">
          <div class="row justify-content-center">
-            <div class="col-6 d-flex flex-column align-items-center text-white py-4">
+            <div class="col-7 d-flex flex-column align-items-center text-white py-4">
                <h2 class="display-6 fw-bold text-uppercase">about</h2>
                <i class="fas fa-star fa-2x pt-3"></i>
-               <p class="pt-3"><strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas amet quaerat fugit
-                     in
-                     porro
-                     labore ex
-                     numquam, harum ab atque modi consequatur cupiditate, debitis aut? Non, doloremque. Voluptate, ex
-                     id?</strong></p>
-               <p class="pt-3"><strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas amet quaerat fugit
-                     in
-                     porro
-                     labore ex numquam, harum ab atque modi consequatur cupiditate, debitis aut? Non, doloremque.
-                     Voluptate,
-                     ex id?</strong></p>
+               <div class="about_text d-sm-flex flex-sm-row">
+                  <p class="pt-3"><strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas amet quaerat
+                        fugit
+                        in
+                        porro
+                        labore ex
+                        numquam, harum ab atque modi consequatur cupiditate, debitis aut? Non, doloremque. Voluptate, ex
+                        id?</strong></p>
+                  <p class="pt-3"><strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas amet quaerat
+                        fugit
+                        in
+                        porro
+                        labore ex numquam, harum ab atque modi consequatur cupiditate, debitis aut? Non, doloremque.
+                        Voluptate,
+                        ex id?</strong></p>
+               </div>
                <a class="text-white fs-2 border border-light rounded px-2 text-decoration-none fw-bold mt-3" href="#"><i
                      class="fas fa-download"></i> Download</a>
             </div>
@@ -107,10 +112,10 @@
       <!-- Contact me -->
       <div id="contact_me">
          <div class="row justify-content-center">
-            <div class="col-6 d-flex flex-column align-items-center py-4">
+            <div class="col-7 d-flex flex-column align-items-center py-4">
                <h2 class="display-6 fw-bold text-uppercase">contact me</h2>
                <i class="fas fa-star fa-2x pt-3"></i>
-               <form class="pt-3 d-flex flex-column">
+               <form class="pt-3 d-flex flex-column col-12">
                   <label for="name">Name</label><br>
                   <input class="border-0 border-bottom" type="text" id="name" name="name"><br>
                   <label for="email">Email Address</label><br>
@@ -120,7 +125,7 @@
                   <label for="message">Message</label><br>
                   <textarea class="border-0 border-bottom" name="message" id="message" rows="5"></textarea>
                   <a id="send_form"
-                     class="text-white col-6 fs-2 border rounded px-2 py-1 mt-3 text-decoration-none text-center"
+                     class="text-white col-3 fs-2 border rounded px-2 py-1 mt-3 text-decoration-none text-center"
                      href="#">
                      Send</a>
                </form>
