add lg responsive classes

--- a/index.html
+++ b/index.html
@@ -49,32 +49,32 @@
             <h2 class="display-6 fw-bold">portfolio</h2>
             <i class="fas fa-star fa-2x pt-3"></i>
             <div class="row g-4 mt-1">
-               <div class="col-12 col-sm-6">
+               <div class="col-12 col-sm-6 col-lg-4">
                   <div class="card_first rounded d-flex align-items-center justify-content-center">
                      <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
                   </div>
                </div>
-               <div class="col-12 col-sm-6">
+               <div class="col-12 col-sm-6 col-lg-4">
                   <div class="card_second rounded d-flex align-items-center justify-content-center">
                      <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
                   </div>
                </div>
-               <div class="col-12 col-sm-6">
+               <div class="col-12 col-sm-6 col-lg-4">
                   <div class="card_third rounded d-flex align-items-center justify-content-center">
                      <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
                   </div>
                </div>
-               <div class="col-12 col-sm-6">
+               <div class="col-12 col-sm-6 col-lg-4">
                   <div class="card_fourth rounded d-flex align-items-center justify-content-center">
                      <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
                   </div>
                </div>
-               <div class="col-12 col-sm-6">
+               <div class="col-12 col-sm-6 col-lg-4">
                   <div class="card_fifth rounded d-flex align-items-center justify-content-center">
                      <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
                   </div>
                </div>
-               <div class="col-12 col-sm-6">
+               <div class="col-12 col-sm-6 col-lg-4">
                   <div class="card_sixth rounded d-flex align-items-center justify-content-center">
                      <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
                   </div>
@@ -85,10 +85,10 @@
       <!-- About -->
       <div id="about">
          <div class="row justify-content-center">
-            <div class="col-7 d-flex flex-column align-items-center text-white py-4">
+            <div class="col-7 col-lg-9 d-flex flex-column align-items-center text-white py-4">
                <h2 class="display-6 fw-bold text-uppercase">about</h2>
                <i class="fas fa-star fa-2x pt-3"></i>
-               <div class="about_text d-sm-flex flex-sm-row">
+               <div class="about_text d-sm-flex flex-sm-row gap-sm-5">
                   <p class="pt-3"><strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas amet quaerat
                         fugit
                         in
@@ -112,7 +112,7 @@
       <!-- Contact me -->
       <div id="contact_me">
          <div class="row justify-content-center">
-            <div class="col-7 d-flex flex-column align-items-center py-4">
+            <div class="col-7 col-lg-9 d-flex flex-column align-items-center py-4">
                <h2 class="display-6 fw-bold text-uppercase">contact me</h2>
                <i class="fas fa-star fa-2x pt-3"></i>
                <form class="pt-3 d-flex flex-column col-12">
