--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
    <!-- Header -->
    <header class="text-uppercase fw-bold">
       <!-- Nav -->
-      <nav id="top-nav" class="col-12">
-         <div id="top-nav-header"
-            class="container-fluid d-flex justify-content-between align-items-center col-sm-11 h-100">
-            <h1 class="fw-bold text-white">Start boostrap</h1>
-            <a class="text-white fs-2 d-sm-none border border-light rounded px-2" href="#"><i
-                  class="fas fa-bars"></i></a>
-            <ul class="list-inline d-none d-sm-block">
-               <li class="list-inline-item"><a class="text-decoration-none text-white" href="#">portfolio</a>
-               </li>
-               <li class="list-inline-item"><a class="text-decoration-none text-white" href="#">about</a></li>
-               <li class="list-inline-item"><a class="text-decoration-none text-white" href="#">contact</a>
-               </li>
-            </ul>
+      <nav id="top-nav" class="navbar navbar-expand-md navbar-dark">
+         <div class="container-fluid">
+            <a class="navbar-brand text-white" href="#">Start bootstrap</a>
+            <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
+               data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+               aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse flex-grow-0" id="navbarNavAltMarkup">
+               <div class="navbar-nav">
+                  <a class="nav-link text-white" aria-current="page" href="#">Portfolio</a>
+                  <a class="nav-link text-white" href="#">about</a>
+                  <a class="nav-link text-white" href="#">contact</a>
+               </div>
+            </div>
          </div>
       </nav>
       <!-- Under nav -->
