improved header under nav

--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
          </div>
       </nav>
       <!-- Under nav -->
-      <section id="under-nav" class="d-flex flex-column align-items-center p-4 text-white">
-         <img class="rounded-circle d-block col-6 col-sm-3" src="https://picsum.photos/id/237/300/300" alt="Dog">
-         <h2 class="pt-2 fw-bold display-2">start boostrap</h2>
-         <i class="fas fa-star fa-2x"></i>
-         <h4 class="pt-2">graphic artist - web designer - illustrator</h4>
-      </section>
+      <div id="under-nav" class="container-fluid">
+         <section class="row text-white">
+            <img class="rounded-circle d-block col-6 offset-md-4 col-md-4" src="img/avatar.svg" alt="Avatar">
+            <h2 class="col-12 text-center fw-bold display-4">start boostrap</h2>
+            <i class="col-12 text-center fas fa-star fa-2x"></i>
+            <h4 class="col-12 text-center pt-3">graphic artist - web designer - illustrator</h4>
+         </section>
+      </div>
    </header>
    <!-- Main -->
    <main>
