--- a/index.html
+++ b/index.html
@@ -48,40 +48,31 @@
    <!-- Main -->
    <main>
       <!-- Cards -->
-      <div class="images_box">
-         <div class="container-fluid text-uppercase d-flex flex-column align-items-center p-4 col-sm-11">
-            <h2 class="display-6 fw-bold">portfolio</h2>
-            <i class="fas fa-star fa-2x pt-3"></i>
-            <div class="row g-4 mt-1">
-               <div class="col-12 col-sm-6 col-lg-4">
-                  <div class="card_first rounded d-flex align-items-center justify-content-center">
-                     <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
-                  </div>
+      <div class="images_box container-fluid">
+         <div class="container-fluid text-uppercase py-4">
+            <div class="row">
+               <h2 class="col-12 text-center display-6 fw-bold">portfolio</h2>
+               <i class="col-12 text-center fas fa-star fa-2x pt-3"></i>
+            </div>
+            <!-- Images -->
+            <div class="row pt-3 g-3">
+               <div class="col-12 col-md-6 col-lg-4">
+                  <img class="rounded-3 w-100" src="img/cabin.png" alt="cabin">
                </div>
-               <div class="col-12 col-sm-6 col-lg-4">
-                  <div class="card_second rounded d-flex align-items-center justify-content-center">
-                     <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
-                  </div>
+               <div class="col-12 col-md-6 col-lg-4">
+                  <img class="rounded-3 w-100" src="img/cake.png" alt="cake">
                </div>
-               <div class="col-12 col-sm-6 col-lg-4">
-                  <div class="card_third rounded d-flex align-items-center justify-content-center">
-                     <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
-                  </div>
+               <div class="col-12 col-md-6 col-lg-4">
+                  <img class="rounded-3 w-100" src="img/circus.png" alt="circus">
                </div>
-               <div class="col-12 col-sm-6 col-lg-4">
-                  <div class="card_fourth rounded d-flex align-items-center justify-content-center">
-                     <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
-                  </div>
+               <div class="col-12 col-md-6 col-lg-4">
+                  <img class="rounded-3 w-100" src="img/game.png" alt="game">
                </div>
-               <div class="col-12 col-sm-6 col-lg-4">
-                  <div class="card_fifth rounded d-flex align-items-center justify-content-center">
-                     <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
-                  </div>
+               <div class="col-12 col-md-6 col-lg-4">
+                  <img class="rounded-3 w-100" src="img/safe.png" alt="safe">
                </div>
-               <div class="col-12 col-sm-6 col-lg-4">
-                  <div class="card_sixth rounded d-flex align-items-center justify-content-center">
-                     <img class="rounded-circle d-block w-50 py-5" src="https://picsum.photos/id/237/300/300" alt="Dog">
-                  </div>
+               <div class="col-12 col-md-6 col-lg-4">
+                  <img class="rounded-3 w-100" src="img/submarine.png" alt="submarine">
                </div>
             </div>
          </div>
