add rows in about section

--- a/index.html
+++ b/index.html
@@ -78,29 +78,23 @@
          </div>
       </div>
       <!-- About -->
-      <div id="about">
-         <div class="row justify-content-center">
-            <div class="col-7 col-lg-9 d-flex flex-column align-items-center text-white py-4">
-               <h2 class="display-6 fw-bold text-uppercase">about</h2>
-               <i class="fas fa-star fa-2x pt-3"></i>
-               <div class="about_text d-sm-flex flex-sm-row gap-sm-5">
-                  <p class="pt-3"><strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas amet quaerat
-                        fugit
-                        in
-                        porro
-                        labore ex
-                        numquam, harum ab atque modi consequatur cupiditate, debitis aut? Non, doloremque. Voluptate, ex
-                        id?</strong></p>
-                  <p class="pt-3"><strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas amet quaerat
-                        fugit
-                        in
-                        porro
-                        labore ex numquam, harum ab atque modi consequatur cupiditate, debitis aut? Non, doloremque.
-                        Voluptate,
-                        ex id?</strong></p>
-               </div>
-               <a class="text-white fs-2 border border-light rounded px-2 text-decoration-none fw-bold mt-3" href="#"><i
-                     class="fas fa-download"></i> Download</a>
+      <div id="about" class="container-fluid py-3">
+         <div class="col-8 offset-2 text-white">
+            <div class="row">
+               <h2 class="col-12 text-center text-uppercase display-6 fw-bold">about</h2>
+               <i class="col-12 text-center fas fa-star fa-2x"></i>
+            </div>
+            <div class="row py-3">
+               <p class="col-12 col-md-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia obcaecati
+                  numquam eum
+                  minus nostrum nobis ratione laboriosam voluptas. Quasi nihil voluptatem corporis fugiat atque quo.
+                  Ipsam impedit porro debitis deleniti!</p>
+               <p class="col-12 col-md-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia obcaecati
+                  numquam eum
+                  minus nostrum nobis ratione laboriosam voluptas. Quasi nihil voluptatem corporis fugiat atque quo.
+                  Ipsam impedit porro debitis deleniti!</p>
+               <button type="button" class="btn btn-primary col-auto m-auto"><i class="fas fa-download"></i>
+                  Download</button>
             </div>
          </div>
       </div>
