add rows contact me

--- a/index.html
+++ b/index.html
@@ -99,27 +99,22 @@
          </div>
       </div>
       <!-- Contact me -->
-      <div id="contact_me">
+      <div id="contact_me" class="container-fluid">
          <div class="row justify-content-center">
-            <div class="col-7 col-lg-9 d-flex flex-column align-items-center py-4">
-               <h2 class="display-6 fw-bold text-uppercase">contact me</h2>
-               <i class="fas fa-star fa-2x pt-3"></i>
-               <form class="pt-3 d-flex flex-column col-12">
-                  <label for="name">Name</label><br>
-                  <input class="border-0 border-bottom" type="text" id="name" name="name"><br>
-                  <label for="email">Email Address</label><br>
-                  <input class="border-0 border-bottom" type="email" id="email" name="email"><br>
-                  <label for="phone">Name Number</label><br>
-                  <input class="border-0 border-bottom" type="tel" id="phone" name="phone"><br>
-                  <label for="message">Message</label><br>
-                  <textarea class="border-0 border-bottom" name="message" id="message" rows="5"></textarea>
-                  <a id="send_form"
-                     class="text-white col-3 fs-2 border rounded px-2 py-1 mt-3 text-decoration-none text-center"
-                     href="#">
-                     Send</a>
-               </form>
-            </div>
+            <h2 class="col-12 text-center display-6 fw-bold text-uppercase">contact me</h2>
+            <i class="col-12 text-center fas fa-star fa-2x pt-3"></i>
          </div>
+         <form class="row col-8 offset-2 d-flex flex-column py-3">
+            <label for="name">Name</label><br>
+            <input class="col-12 border-0 border-bottom" type="text" id="name" name="name"><br>
+            <label for="email">Email Address</label><br>
+            <input class="col-12 border-0 border-bottom" type="email" id="email" name="email"><br>
+            <label for="phone">Name Number</label><br>
+            <input class="col-12 border-0 border-bottom" type="tel" id="phone" name="phone"><br>
+            <label for="message">Message</label><br>
+            <textarea class="col-12 border-0 border-bottom" name="message" id="message" rows="5"></textarea>
+            <button type="button" class="btn btn-primary col-4 mt-2">Send</button>
+         </form>
       </div>
    </main>
    <!-- Footer -->
