added rows in footer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- Under nav -->
       <div id="under-nav" class="container-fluid">
          <section class="row text-white">
-            <img class="rounded-circle d-block col-6 offset-md-4 col-md-4" src="img/avatar.svg" alt="Avatar">
+            <img class="rounded-circle d-block col-6 offset-3 offset-md-4 col-md-4" src="img/avatar.svg" alt="Avatar">
             <h2 class="col-12 text-center fw-bold display-4">start boostrap</h2>
             <i class="col-12 text-center fas fa-star fa-2x"></i>
             <h4 class="col-12 text-center pt-3">graphic artist - web designer - illustrator</h4>
@@ -120,17 +120,16 @@
    <!-- Footer -->
    <Footer>
       <!-- Locatiom social -->
-      <div id="location">
-         <div
-            class="container-fluid d-flex flex-sm-row justify-content-sm-between align-items-sm-start flex-column align-items-center text-white fw-bold px-2 px-sm-5 py-5 text-center">
-            <div class="location col-sm-4">
-               <h3 class="text-uppercase">location</h3>
-               <p class="fs-5">2215 John Daniel Drive Clarck, MO 54243</p>
+      <div id="location" class="container-fluid">
+         <div class="text-white fw-bold px-2 px-sm-5 py-5 text-center">
+            <div class="row location col-md-4">
+               <h3 class="col-12 text-center text-uppercase">location</h3>
+               <p class="col-12 text-center fs-5">2215 John Daniel Drive Clarck, MO 54243</p>
             </div>
             <!-- Social -->
-            <div class="social col-sm-4">
-               <h3 class="text-uppercase pt-5 pt-sm-0">around the web</h3>
-               <ul class="list-inline">
+            <div class="row social col-md-4">
+               <h3 class="col-12 text-center text-uppercase pt-5 pt-sm-0">around the web</h3>
+               <ul class="col-12 text-center list-inline">
                   <li class="list-inline-item">
                      <a href="#"><i class="fab fa-facebook-f fa-2x m-2 text-white"></i></a>
                   </li>
@@ -146,10 +145,10 @@
                </ul>
             </div>
             <!-- About freelancer -->
-            <div class="about_freelancer col-sm-4">
-               <h3 class="text-uppercase pt-5 pt-sm-0">about freelancer</h3>
-               <p class="fs-5">Freelance is a free to use, open source Boostrap theme created by <a id="footer_boostrap"
-                     class="text-decoration-none" href="#">Start
+            <div class="row about_freelancer col-md-4">
+               <h3 class="col-12 text-center text-uppercase pt-5 pt-sm-0">about freelancer</h3>
+               <p class="col-12 text-center fs-5">Freelance is a free to use, open source Boostrap theme created by <a
+                     id="footer_boostrap" class="text-decoration-none" href="#">Start
                      Boostrap</a></p>
             </div>
          </div>
