--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <input class="col-12 border-0 border-bottom" type="tel" id="phone" name="phone"><br>
             <label for="message">Message</label><br>
             <textarea class="col-12 border-0 border-bottom" name="message" id="message" rows="5"></textarea>
-            <button type="button" class="btn btn-primary col-4 mt-2">Send</button>
+            <button type="button" class="btn btn-primary col-4 col-md-2 mt-2">Send</button>
          </form>
       </div>
    </main>
@@ -121,14 +121,14 @@
    <Footer>
       <!-- Locatiom social -->
       <div id="location" class="container-fluid">
-         <div class="text-white fw-bold px-2 px-sm-5 py-5 text-center">
-            <div class="row location col-md-4">
-               <h3 class="col-12 text-center text-uppercase">location</h3>
+         <div class="row text-white py-3 justify-content-center">
+            <div class="row col-12 col-md-4">
+               <h4 class="col-12 text-center text-uppercase">location</h4>
                <p class="col-12 text-center fs-5">2215 John Daniel Drive Clarck, MO 54243</p>
             </div>
             <!-- Social -->
-            <div class="row social col-md-4">
-               <h3 class="col-12 text-center text-uppercase pt-5 pt-sm-0">around the web</h3>
+            <div class="row col-12 col-md-4">
+               <h4 class="col-12 text-center text-uppercase">around the web</h4>
                <ul class="col-12 text-center list-inline">
                   <li class="list-inline-item">
                      <a href="#"><i class="fab fa-facebook-f fa-2x m-2 text-white"></i></a>
@@ -145,11 +145,13 @@
                </ul>
             </div>
             <!-- About freelancer -->
-            <div class="row about_freelancer col-md-4">
-               <h3 class="col-12 text-center text-uppercase pt-5 pt-sm-0">about freelancer</h3>
-               <p class="col-12 text-center fs-5">Freelance is a free to use, open source Boostrap theme created by <a
-                     id="footer_boostrap" class="text-decoration-none" href="#">Start
-                     Boostrap</a></p>
+            <div class="row col-12 col-md-4">
+               <h4 class="col-12 text-center text-uppercase">about freelancer</h4>
+               <p class="col-6 offset-3 col-md-12 offset-md-0 text-center">Freelance is a free to use, open source
+                  Boostrap theme created by
+                  <a id="footer_boostrap" class="text-decoration-none" href="#">Start
+                     Boostrap</a>
+               </p>
             </div>
          </div>
       </div>
