added container for header and cards

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <header class="text-uppercase fw-bold">
       <!-- Nav -->
       <nav id="top-nav" class="navbar navbar-expand-md navbar-dark">
-         <div class="container-fluid">
+         <div class="container-lg">
             <a class="navbar-brand text-white" href="#">Start bootstrap</a>
             <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -48,7 +48,7 @@
    <!-- Main -->
    <main>
       <!-- Cards -->
-      <div class="images_box container-fluid">
+      <div class="images_box container-lg">
          <div class="container-fluid text-uppercase py-4">
             <div class="row">
                <h2 class="col-12 text-center display-6 fw-bold">portfolio</h2>
