reduced size user img

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <!-- Under nav -->
       <div id="under-nav" class="container-fluid">
          <section class="row text-white">
-            <img class="rounded-circle d-block col-6 offset-3 offset-md-4 col-md-4" src="img/avatar.svg" alt="Avatar">
+            <img class="rounded-circle d-block col-6 offset-3 offset-md-4 col-md-4 col-lg-2 offset-lg-5"
+               src="img/avatar.svg" alt="Avatar">
             <h2 class="col-12 text-center fw-bold display-4">start boostrap</h2>
             <i class="col-12 text-center fas fa-star fa-2x"></i>
             <h4 class="col-12 text-center pt-3">graphic artist - web designer - illustrator</h4>
